@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cedar-backup3"
-version = "3.7.2"
+version = "0.0.0" # published version is managed using Git tags (see below)
 description = "Implements local and remote backups to CD/DVD and Amazon S3"
 keywords = [ 'local', 'remote', 'backup', 'scp' ]
 authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
@@ -31,6 +31,14 @@ classifiers=[
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
 ]
+
+# Published version is managed using Git tags
+# We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
+# If the plugin is not installed, then the version is always "0.0.0", taken from above
+[tool.poetry-dynamic-versioning]
+enable = true
+pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
+format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
 
 [tool.poetry.scripts]
 cback3 = 'CedarBackup3.scripts:cback3' 
@@ -81,5 +89,5 @@ line_length = 132
 skip_glob = [ "docs", "notes" ]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
